--- a/Desktop/portfolio/package.json
+++ b/Desktop/portfolio/package.json
@@ -16,8 +16,10 @@
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.3",
     "gsap": "^3.12.7",
+    "p5": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-p5": "^1.4.1",
     "react-router-dom": "^7.7.1",
     "three": "^0.176.0"
   },
